@@ -1,5 +1,13 @@
 2009-12-18  Sergio Villar Senin  <svillar@igalia.com>
 
+	* camel/providers/pop3/camel-pop3-folder.c (pop3_sync): protect
+	the call to camel_pop3_store_expunge
+
+	* camel/providers/pop3/camel-pop3-store.c
+	(camel_pop3_store_expunge): do not perform a sync if we're offline
+
+2009-12-18  Sergio Villar Senin  <svillar@igalia.com>
+
 	* libtinymail-maemo/tny-maemo-conic-device.c (conic_emit_status)
 	(tny_maemo_conic_device_instance_init)
 	(tny_maemo_conic_device_finalize): do not issue pending
